4.0/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todoapp-route
  namespace: project
spec:
  parentRefs:
    - name: todoapp-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /todos
      backendRefs:
        - name: todo-backend-svc
          port: 2345
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todoapp-svc
          port: 2345
